<resources>
    <string name="appwidget_text">widget</string>
    <string name="app_name">MyHobbyAlarm</string>
    <string name="no_to_dos">You don\'t have any todos</string>
    <string name="remind_me">Remind Me</string>
    <string name="choose_date">Date</string>
    <string name="choose_time">Time</string>
    <string name="remind_date_and_time">Reminder set for %1$s, %2$s %3$s</string>
    <string name="about">About</string>
    <string name="app_version">Version: %1$s</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">Made by Avjinder</string>
    <string name="done_label">Done</string>
    <string name="date_reminder_default">Today</string>
    <string name="date_error_check_again">The date you entered is in the past.</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_on_summary">Night mode is on</string>
    <string name="night_mode_off_summary">Night mode is off</string>
    <string name="description">Description</string>


    <string name="remove">Remove</string>
    <string name="todo_error">Please enter a Todo</string>


    <!--                                     -->
    <!--              TEST TEXT              -->
    <!--                                     -->
    <string name="calendar_test">CalendarTest</string>
    <string name="calendar_button">ex 일정</string>
    <string name="day_list_title">Day ex) 2019 10 11</string>
    <string name="day_list_btn">ADD</string>
    <string name="task_example">Clean My Room</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_create_note">Create Note</string>

    <string name="title">Test</string>

    <string name="detail">Small Text</string>


    <string-array name="note_type">

        <item>Normal</item>

        <item>Standard</item>

        <item>Urgent</item>
        <item>Notify</item>

    </string-array>

    <string name="title_activity_information">Information</string>

    <string name="title_activity_edit__note">Edit Note</string>

    <string name="New">Create New Note</string>

    <string name="back">Back to Main</string>

    <string name="save">Save Note</string>

    <string name="edit">Edit Note</string>

    <string name="discard">Discard Note</string>

    <string name="note_type_text">Choose Note Type:</string>

    <string name="title_activity_alert">Alert</string>

    <string name="Not_Set">Not Set</string>

    <string name="hour_minutes">HH:mm</string>

    <string name="alert_title">title</string>
    <string name="set_notify">Set Notification</string>
    <string name="added_alert">An Alert can be added</string>
    <string name="notify">You can recieve notifications</string>
    <string name="rodId">rowID</string>

    <string name="Alertnotifty">"Alert: "</string>

    <string name="alerttitle">title</string>

    <string name="delete_title">Delete Selected Task</string>

    <string name="delete_message">Are you sure?</string>

    <string name="rodID">rowID</string>

    <string name="rowID">rowID</string>

    <string name="row_id">rowID</string>

    <string name="intent_row_id">rowID</string>

    <string name="row_id_long">rowID</string>

    <string name="alarm_active">An Alert can be added!</string>

    <string name="row_id_log">rowID</string>

    <string name="title_hint">Enter Task</string>

    <string name="hint_description">Enter Task Description</string>

    <string name="set_alert">Set Alert</string>

    <string name="textview_date">Select Date</string>

    <string name="txt_time">Enter Time:</string>

    <string name="txt_edit_hint">Enter Title</string>

    <string name="detail_hint">Enter Description</string>

    <string name="type_note">Note Type:</string>

    <string name="view_title">Large Text</string>

    <string name="view_detail">Medium Text</string>

    <string name="note_type">Medium Text</string>

    <string name="type_list_entry">Small Text</string>

    <string name="time_view">testtime</string>

    <string name="alarmtext">Alert: </string>

    <string name="dateformate">dd/MM/yyyy</string>

    <string name="Not_Set_Alert">Not Set</string>

    <string name="ok">Ok</string>

    <string name="title_msg">title</string>

    <string name="titttle">title</string>
    <string name="alert_content">alert_content</string>
    <string name="channelName">channelName</string>

    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">Press the Floating Action Button to add an alarm!</string>


    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">Time</string>
    <string name="label">Label</string>
    <string name="days">Days</string>
    <string name="snooze">Snooze</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_label_hint">Add a label!</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="snooze_options">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>


    <!-- Main Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_color">Color</string>
    <string name="action_days">days</string>
    <string name="action_calendar">Delete</string>

    <!-- Edit Alarm Menu -->
<!--    <string name="action_save">Save</string>-->
    <string name="action_delete">Calendar</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="Landing_main_activity">Main</string>
    <string name="Landing_calendar">일기기록하기</string>
    <string name="Landing_dismiss">취소</string>

    <!-- Days -->
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    <!-- Notification -->
    <string name="channel_name">Simple Alarms</string>
    <string name="titleColor">Color</string>
    <string name="edit_journal">Edit Journal</string>
    <string name="add_journal">Add Journal</string>
    <string name="add_contetn_hint">오늘의 느낀점을 기록해 보세요 \n \n </string>
    <string name="content">Content</string>
    <string name="day">Day</string>
    <string name="preview">Preview</string>
</resources>
