<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:textColor="@color/blue"
            android:layout_margin="3dp"
            android:id="@+id/tvTitle"
            android:layout_toLeftOf="@+id/tvType"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/type_list_entry"
            android:id="@+id/tvType"
            android:layout_column="71"
            android:textColor="@android:color/holo_blue_light"
            android:layout_weight="0.24"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/detail"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_margin="3dp"
            android:id="@+id/tvDetail"
            android:layout_weight="0.73"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/alarmImage"
            android:layout_toLeftOf="@+id/alarmImage" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/alarmImage"
            android:layout_gravity="right"
            android:src="@drawable/ic_action_alarms"
            android:scaleType="fitXY"
            android:layout_alignBottom="@+id/tvTime"
            android:layout_toLeftOf="@+id/tvTime"
            android:layout_toStartOf="@+id/tvTime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvTime"
            android:text="@string/time_view"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvDate"
        android:textColor="@android:color/holo_red_dark"
        android:layout_gravity="right" />

</LinearLayout>
