<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <TimePicker
            android:id="@+id/edit_alarm_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:timePickerMode="spinner"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <EditText
            android:id="@+id/edit_alarm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/add_label_hint"
            android:inputType="textCapWords"
            android:maxLength="15"
            android:textColor="@color/secondary_text"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/days"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Days" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/monday"
                    tools:text="Mon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tuesday"
                    tools:text="Tue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wednesday"
                    tools:text="Wed" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/thursday"
                    tools:text="Thu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/friday"
                    tools:text="Fri" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/saturday"
                    android:textColor="@color/blue"
                    tools:text="Sat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sunday"
                    android:textColor="@color/softRed"
                    tools:text="Sun" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/edit_alarm_mon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center" />

                <CheckBox
                    android:id="@+id/edit_alarm_tues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center" />

                <CheckBox
                    android:id="@+id/edit_alarm_wed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center" />

                <CheckBox
                    android:id="@+id/edit_alarm_thurs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center" />

                <CheckBox
                    android:id="@+id/edit_alarm_fri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center" />

                <CheckBox
                    android:id="@+id/edit_alarm_sat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center" />

                <CheckBox
                    android:id="@+id/edit_alarm_sun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:layout_weight="1"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/snooze"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/titleColor"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/softRed"
                    android:background="@color/colorBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/lightOrange"
                    android:background="@color/colorBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/softOrange"
                    android:background="@color/colorBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/slightlyCyan"
                    android:background="@color/colorBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/slightlyGreen"
                    android:background="@color/colorBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/green"
                    android:background="@color/colorBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/strongCyan"
                    android:background="@color/colorBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/blue"
                    android:background="@color/colorBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/moderateBlue"
                    android:background="@color/colorBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/moderateViolet"
                    android:background="@color/colorBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
                    android:tint="@color/black"
                    android:background="@color/colorBackground"/>

            </LinearLayout>

        </HorizontalScrollView>


    </LinearLayout>

</ScrollView>